# dmpool

./: .dockerignore  .gitignore  AUTHORS.md  BUSINESS_LOGIC_AUDIT.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  CONTRIBUTING_ZH.md  Cargo.toml  DEPLOYMENT.md  PRODUCTION_CHECKLIST.md  PROJECT_CONFIG.md  README.md  README_ZH.md  REVIEW_GUIDE.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_ZH.md  STATUS.md  config.toml  dist-workspace.toml  docker-compose.yml  justfile
config/: homelab-signet-public.toml  homelab-signet.toml  local-test.toml
deploy/: deploy.sh  nginx-dmpool.conf
docker/: Dockerfile.grafana  Dockerfile.hydrapool  Dockerfile.prometheus  README.md  cli.sh  config-example.toml  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx.ssl.conf  prometheus-entrypoint.sh
docker/signet/: bitcoin-signet.conf
docker/testnet4/: bitcoin-testnet4.conf
docs/: ADMIN_PANEL_MINIMAL.md  ADMIN_PANEL_PRD.md  API.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE_CN.md  DISASTER_RECOVERY.md  HONEST_STATUS.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  OBSERVER_GUIDE.md  PRD_GAP_ANALYSIS.md  PRODUCTION_STATUS.md  TEST_REPORT_2026-02-04.md  openapi.yaml
migrations/: 001_admin_tables.sql
prometheus/: prometheus.yml
prometheus/grafana/dashboards/: pool.json  pool_zh.json  users.json  users_private.json  users_private_zh.json  users_zh.json
prometheus/grafana/provisioning/dashboards/: dashboards.yml
prometheus/grafana/provisioning/datasources/: prometheus.yml
scripts/: backup.sh  deploy-to-homelab.sh  dmpool-backup.service  dmpool-backup.timer  restore.sh
src/: lib.rs  main.rs
src/admin/: mod.rs
src/admin_api/: error.rs  middleware.rs  mod.rs
src/admin_api/routes/: blocks.rs  config.rs  dashboard.rs  miners.rs  mod.rs  monitoring.rs  notifications.rs  payments.rs  workers.rs
src/alert/: mod.rs
src/audit/: mod.rs
src/auth/: mod.rs
src/backup/: mod.rs
src/bitcoin/: mod.rs
src/config/: mod.rs
src/config_mgt/: mod.rs
src/confirmation/: mod.rs
src/db/: mod.rs
src/health/: mod.rs
src/migration/: error.rs  mod.rs  runner.rs  schema.rs
src/observer_api/: error.rs  mod.rs
src/observer_api/routes/: mod.rs
src/payment/: mod.rs
src/pplns_validator/: mod.rs
src/rate_limit/: mod.rs
src/reload/: mod.rs
src/two_factor/: mod.rs
static/admin/: index.html  observer.html
tests/: basic_startup_test.rs  observer_api_tests.rs
tests/common/: mod.rs
web-admin/: index.html  package-lock.json  package.json
web-admin/src/: App.vue  main.ts
web-admin/src/api/: index.ts
web-admin/src/assets/: styles.css
web-admin/src/router/: index.ts
web-admin/src/stores/: auth.ts
web-admin/src/types/: index.ts
web-admin/src/views/: DashboardView.vue  MinersView.vue  NotificationsView.vue  PaymentsView.vue  SettingsView.vue
web-observer/: index.html  package-lock.json  package.json  tailwind.config.js
web-observer/src/: App.tsx  index.css
web-observer/src/components/charts/: HashrateChart.tsx
web-observer/src/components/tables/: EarningsTable.tsx  WorkersTable.tsx
web-observer/src/components/ui/: Spinner.tsx
web-observer/src/lib/: api.ts
web-observer/src/pages/: BlockDetailPage.tsx  BlocksPage.tsx  HomePage.tsx  MinerPage.tsx  PoolStatsPage.tsx
web-observer/src/types/: index.ts
web/admin/: .env.example  README.md  index.html  package.json  vite.config.ts
web/admin/src/: App.vue  main.ts
web/admin/src/api/: index.ts
web/admin/src/router/: index.ts
(+11 files in other folders)
