[package]
name = "dmpool"
version = "2.4.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["Kulpreet Singh<kp@opdup.com>"]
license = "AGPLv3"
description = "DMPool - an open source PPLNS pool for bitcoin"
readme = "README.md"
homepage = "https://dmpool.org/"
repository = "https://github.com/kxx2026/dmpool/"
keywords = ["bitcoin", "mining", "pool", "p2p"]
categories = ["cryptography::cryptocurrencies"]
# Tests enabled
default-run = "dmpool"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitcoin = { version = "0.32.5", features = ["serde", "rand"] }
tokio = { version = "1.0", features = ["full"] }
p2poolv2_lib = { git = "https://github.com/p2poolv2/p2poolv2", package = "p2poolv2_lib", tag = "v0.7.0" }
p2poolv2_cli = { git = "https://github.com/p2poolv2/p2poolv2", package = "p2poolv2_cli", tag = "v0.7.0" }
p2poolv2_api = { git = "https://github.com/p2poolv2/p2poolv2", package = "p2poolv2_api", tag = "v0.7.0" }
bitcoindrpc = { git = "https://github.com/p2poolv2/p2poolv2", package = "bitcoindrpc", tag = "v0.7.0" }
anyhow = "1.0"
chrono = "0.4"
thiserror = "2.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
bitcoincore-rpc = "0.18"
jsonwebtoken = "9"
bcrypt = "0.15"
tower_governor = "0.4"
tower = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
tempfile = "3.0"
reqwest = { version = "0.12", features = ["json"] }
totp-rs = { version = "5.5", features = ["qr"] }
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
base32 = "0.5"
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
[dev-dependencies]
anyhow = "1.0"
chrono = "0.4"
thiserror = "2.0"
async-trait = "0.1"
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tower = "0.5"
http-body-util = "0.1"
axum-macros = "0.7"

[[bin]]
name = "dmpool"
test = false
bench = false

[[bin]]
name = "dmpool_cli"
test = false
bench = false

[lib]
name = "dmpool"
path = "src/lib.rs"

[[bin]]
name = "dmpool_health"
path = "src/bin/dmpool_health.rs"

[package.metadata.deb]
maintainer = "Kulpreet Singh <kp@opdup.com>"
copyright = "2024, Kulpreet Singh <kp@opdup.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
DMPool is an open source Bitcoin mining pool with support for solo mining \
and PPLNS (Pay Per Last N Shares) accounting. Features include:\n\
  - Run a private solo pool or PPLNS pool\n\
  - Payouts made directly from coinbase (no custody)\n\
  - API for downloading and validating share accounting\n\
  - Compatible with any bitcoin RPC node"""
depends = "$auto, systemd"
section = "net"
priority = "optional"
assets = [
    ["target/release/dmpool", "usr/bin/", "755"],
    ["target/release/dmpool_cli", "usr/bin/", "755"],
    ["config.toml", "etc/dmpool/config.toml", "644"],
]
conf-files = ["/etc/dmpool/config.toml"]
maintainer-scripts = "packages/debian/"
systemd-units = { enable = false }

[[bin]]
name = "dmpool_admin"
test = false
bench = false
